--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <!--a href="#" id="open-popup" onclick ="showMailingPopUp(); return false;">Join Newsletter</a-->
                 <!--a class="btn btn-light btn-xl" href="#" id="show-popup" onclick ="showPopup(); return false;">Iscriviti</a-->
         <!-- Begin Mailchimp Signup Form -->
-<link href="http://cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
     #mc_embed_signup{ clear:center; font:14px Helvetica,Arial,sans-serif; }
     /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
