--- a/index.html
+++ b/index.html
@@ -165,28 +165,28 @@
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
                 <h2 class="mb-4">Iscriviti alla mailing list per ricevere le offerte</h2>
-
-
-<!--a href="#" id="open-popup" onclick ="showMailingPopUp(); return false;">Join Newsletter</a-->
-                <!--a class="btn btn-light btn-xl" href="#" id="show-popup" onclick ="showPopup(); return false;">Iscriviti</a-->
         <!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-    #mc_embed_signup{ clear:center; font:14px Helvetica,Arial,sans-serif; }
-    /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-       We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-<form action="https://gmail.us19.list-manage.com/subscribe/post?u=b97386fdb659a7d4c6276934a&amp;id=5053c9fcc1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-    <!--label for="mce-EMAIL">Subscribe</label-->
-    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: 5000px;" aria-hidden="true"><input type="text" name="b_b97386fdb659a7d4c6276934a_5053c9fcc1" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
+                <!--link href="http://cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css"-->
+                <style type="text/css">
+                    #mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; }
+                    /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                       We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+                </style>
+                <div id="mc_embed_signup">
+                <form action="https://gmail.us19.list-manage.com/subscribe/post?u=b97386fdb659a7d4c6276934a&amp;id=5053c9fcc1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <div id="mc_embed_signup_scroll" style="text-align: center;">
+                        <!--label for="mce-EMAIL">Subscribe</label-->
+                        <input type="email" value="" name="EMAIL"  id="mce-EMAIL" placeholder="email address" required class="myform">
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b97386fdb659a7d4c6276934a_5053c9fcc1" tabindex="-1" value="">
+                        </div>
+                        <div class="clear">
+                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="myButton">
+
+                        </div>
+                    </div>
+                </form>
+                </div>
 
 <!--End mc_embed_signup-->          
 
@@ -221,23 +221,23 @@
             <i class="fas fa-phone"></i><span style="font-size: 0.5em; ">07523 599 557  </span></a>
           </span-->
                     <div class="col-lg-4b ml-auto text-center mb-5 mb-lg-0">
-                        <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div><a class="d-block" href="tel:+393478226693 " onmouseover="this.style.color='orange';" onmouseout="this.style.color='#212529';" style="color:#212529;">+1 (555) 123-4567</a></div>
+                        
+                        <div><a class="d-block" href="tel:+393478226693 " onmouseover="this.style.color='orange';" onmouseout="this.style.color='#212529';" style="color:#212529;"><i class="fas fa-phone fa-3x mb-3 text-muted"></i></a></div>
                     </div>
 
 <div class="col-lg-4b ml-auto text-center mb-5 mb-lg-0">
                         <i class="fab fa-whatsapp fa-3x mb-3 text-muted"></i>
-                        <div>+1 (555) 123-4567</div>
+                        <!--div>+1 (555) 123-4567</div-->
                     </div>
 
 <div class="col-lg-4b ml-auto text-center mb-5 mb-lg-0">
                         <i class="fab fa-facebook-f fa-3x mb-3 text-muted"></i>
-                        <div>+1 (555) 123-4567</div>
+                        <!--div>+1 (555) 123-4567</div-->
                     </div>
 
                    <div class="col-lg-4b ml-auto text-center mb-5 mb-lg-0">
-                        <i class="fas fa-envelope fa-3x mb-3 text-muted"></i
-                        ><a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+                        <a class="d-block" href="mailto:contact@yourwebsite.com"><i class="fas fa-envelope fa-3x mb-3 text-muted"></i
+                        ></a>
                     </div>
                 </div>
             </div>
