--- a/index.html
+++ b/index.html
@@ -72,29 +72,29 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <!--i class="fas fa-4x fa-gem text-primary mb-4"></i-->
+                            <h3 class="h4 mb-2">Chi siamo</h3>
+                            <p class="text-muted mb-0">Siamo Lino e Biagio e vogliamo cambiare il modo delle famiglie di fare la spesa. Siamo convinti che mettere in contatto i produttori e i consumatori sia il modo migliore per tutelare la qualità dei prodotti e a ridurre lo spreco alimentare.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <!--i class="fas fa-4x fa-laptop-code text-primary mb-4"></i-->
+                            <h3 class="h4 mb-2">Mission</h3>
+                            <p class="text-muted mb-0">Ridurre la filiera della distribuzione di frutta e verdura. In questo modo si garantisce una maggiore freschezza del prodotto e si garantisce un prezzo migliore sia per l'acquirente che per il produttore. Questo favorisce la qualità del prodotto e un minore inquinamento. Ci vincono tutti.-</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <!--i class="fas fa-4x fa-globe text-primary mb-4"></i-->
                             <h3 class="h4 mb-2">Prodotti</h3>
                             <p class="text-muted mb-0">Offriamo i prodotti della terra appena raccolti coltivati con lotta integrata o biologici. La freschezza del prodotto è imbattibile perchè la filiera è accorciata direttamente dal produttore al consumatore.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <!--i class="fas fa-4x fa-laptop-code text-primary mb-4"></i-->
-                            <h3 class="h4 mb-2">Dove</h3>
-                            <p class="text-muted mb-0">I prodotti vengono coltivati nelle campagne dell'agro Falerno sul litorale domizio. Le terre di origine vulcanica danno un sapore intenso.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <!--i class="fas fa-4x fa-globe text-primary mb-4"></i-->
-                            <h3 class="h4 mb-2">Consegne</h3>
-                            <p class="text-muted mb-0">Le consegne a domicilio vengono fatte settimanalmente su prenotazione. Per i gruppi di acquisto si applicano condizioni agevolate. Contattateci per avere maggiori info.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
                             <!--i class="fas fa-4x fa-heart text-primary mb-4"></i-->
-                            <h3 class="h4 mb-2">Pagamento</h3>
-                            <p class="text-muted mb-0">Pagamento alla consegna dei prodotti ordinati.</p>
+                            <h3 class="h4 mb-2">Pagamento e Consegne</h3>
+                            <p class="text-muted mb-0">Le consegne a domicilio vengono fatte settimanalmente su prenotazione. Per i gruppi di acquisto si applicano condizioni agevolate. Contattateci per avere maggiori info.Pagamento alla consegna dei prodotti ordinati.</p>
                         </div>
                     </div>
                 </div>
